--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/KabenkinK13_02_2022.KabenkinK13_02_2022
 GlobalDefaultGameMode=/Game/Main/MainGM.MainGM_C
+EditorStartupMap=/Game/KabenkinK13_02_2022.KabenkinK13_02_2022
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
